swap out header, fixed sidebar alignment issues and rearranged layout

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
+.jumbotron h2{
+  align-items: center;
+} 
+
 .intro {
   border: 2px solid gray;
   padding: 10px;
@@ -26,7 +30,8 @@
 
 .centered-image {
   margin: auto;
-  width: 25%;
+  padding: 15px;
+  width: 50%;
   height: auto;
   display: block;
 }
@@ -44,4 +49,8 @@ p.subhead{
 #sidebar-header{
   font-weight: bold;
   text-decoration: underline;
+}
+
+#sidebar{
+  background-color: lightgray;
 }
